--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
+    "envfile": "^6.14.0",
     "express": "~4.16.1",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   }
